# aqua

./: .gitignore  Cargo.toml  Dockerfile  README.md
crates/cli/: Cargo.toml
crates/cli/src/: input.rs  logging.rs  main.rs  version.rs
crates/compiler/: Cargo.toml
crates/compiler/fuzz/: Cargo.toml
crates/compiler/fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
crates/compiler/src/: annotate.rs  apply.rs  ast.rs  codegen.rs  controlflow.rs  declare.rs  desugar.rs  diag.rs  display.rs  dsl.rs  ffi.rs  flatten.rs  infer.rs  interpret.rs  lexer.rs  lib.rs  lift.rs  map.rs  monomorphise.rs  opt.rs  ordmap.rs  package.rs  parser.rs  parser2.rs  print.rs  query.rs  reachable.rs  resolve.rs  sources.rs  span.rs  spanned.rs  ssa.rs  symbol.rs  token.rs  union_find.rs  util.rs  visitor.rs
crates/compiler/src/ast/: constructors.rs  downcasts.rs  into_egg.rs  span_of.rs  type_of.rs  upcasts.rs  utils.rs  with_span.rs  with_type.rs
crates/compiler/src/builtins/: conv.rs  de.rs  decls.rs  eq.rs  hash.rs  mod.rs  ord.rs  ser.rs  types.rs  value.rs
crates/compiler/src/builtins/decls/: aggregator.rs  bool.rs  char.rs  dict.rs  f32.rs  f64.rs  function.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  image.rs  instance.rs  iterator.rs  matrix.rs  model.rs  option.rs  path.rs  socket.rs  stream.rs  string.rs  time.rs  traits.rs  tuple.rs  types.rs  u128.rs  u16.rs  u32.rs  url.rs  usize.rs  variant.rs  vec.rs  writer.rs
crates/compiler/src/builtins/decls/traits/: add.rs  deep_clone.rs  display.rs  div.rs  eq.rs  mul.rs  neg.rs  not.rs  ord.rs  serde.rs  sub.rs
crates/compiler/src/builtins/decls/types/: aggregator.rs  array.rs  blob.rs  bool.rs  char.rs  dataflow.rs  dict.rs  discretizer.rs  duration.rs  encoding.rs  f64.rs  file.rs  i32.rs  keyed_stream.rs  never.rs  ordering.rs  range.rs  reader.rs  record.rs  result.rs  set.rs  stream.rs  time_source.rs  u64.rs  u8.rs  unit.rs
crates/compiler/src/builtins/dynamic/: array.rs  dataflow.rs  function.rs  instance.rs  matrix.rs  record.rs  stream.rs  tuple.rs  variant.rs
crates/compiler/src/builtins/traits/: add.rs  clone.rs  copy.rs  debug.rs  default.rs  display.rs  div.rs  eq.rs  fun.rs  hash.rs  into_iterator.rs  iterator.rs  mul.rs  neg.rs  not.rs  ord.rs  partial_eq.rs  partial_ord.rs  serde.rs  sub.rs
crates/compiler/src/builtins/types/: aggregator.rs  array.rs  backend.rs  blob.rs  bool.rs  dataflow.rs  dict.rs  discretizer.rs  duration.rs  encoding.rs  f32.rs  f64.rs  file.rs  function.rs  i16.rs  i32.rs  i8.rs  image.rs  instance.rs  keyed_stream.rs  matrix.rs  model.rs  never.rs  option.rs  ordering.rs  path.rs  range.rs  reader.rs  record.rs  result.rs  set.rs  socket.rs  stream.rs  string.rs  time.rs  time_source.rs  tuple.rs  u128.rs  u16.rs  u32.rs  (+7 more)
crates/compiler/src/codegen/: rust.rs
crates/compiler/src/collections/: map.rs  ordmap.rs  set.rs  union_find.rs
crates/compiler/src/infer/: annotate.rs  apply.rs  canonicalize.rs  defaults.rs  expand.rs  gather_goals.rs  instantiate.rs  local.rs  type_var.rs
crates/compiler/src/monomorphise/: mangle.rs
crates/compiler/src/opt/: arith.egg  compare.egg  data.egg  dataflow.egg  desugar.egg  eval.egg  freevars.egg  if-else.egg  lib.egg  list.egg  logic.egg  physical.egg
crates/compiler/src/symbol/: standard.rs
crates/compiler/src/traversal/: mapper.rs  visitor.rs
crates/compiler/src/visitor/: apply.rs  mapping_visitor.rs  unit_visitor.rs
crates/compiler/tests/: codegen.rs  controlflow.rs  desugar.rs  display.rs  flatten.rs  infer.rs  interpret.rs  lexer.rs  lift.rs  monomorphise.rs  optimiser.egg  optimiser.rs  parser.rs  parser2.rs  querycomp.rs  resolve.rs  ser.rs  serde.rs  source.rs  ssa.rs  traits.rs  unify.rs
crates/compiler/tests/common/: dsl.rs  mod.rs  passes.rs
crates/runtime/: Cargo.toml
crates/runtime/.cargo/: config.toml
crates/runtime/benches/: iter.rs  vec.rs
crates/runtime/src/: lib.rs
crates/runtime/src/builtins/: aggregator.rs  array.rs  assigner.rs  blob.rs  cell.rs  cow.rs  dict.rs  duration.rs  encoding.rs  file.rs  im_string.rs  image.rs  keyed_stream.rs  matrix.rs  mod.rs  model.rs  option.rs  path.rs  range.rs  reader.rs  result.rs  set.rs  socket.rs  stream.rs  string.rs  time.rs  time_source.rs  unchecked_cell.rs  url.rs  vec.rs  writer.rs
crates/runtime/src/builtins/channel/: spsc.rs
crates/runtime/src/builtins/keyed_stream/: drain.rs  filter.rs  flat_map.rs  fork.rs  incr_window.rs  join.rs  keyby.rs  map.rs  merge.rs  scan.rs  unkey.rs  window.rs
crates/runtime/src/builtins/keyed_stream/window/: count_sliding_holistic.rs  time_sliding_aligned_commutative_associative.rs  time_sliding_aligned_holistic.rs  time_tumbling_holistic.rs  time_tumbling_holistic_vec.rs
crates/runtime/src/builtins/stream/: assert.rs  batch.rs  drain.rs  filter.rs  filter_map.rs  flat_map.rs  fork.rs  join.rs  keyby.rs  map.rs  merge.rs  operator.rs  scan.rs  sink.rs  source.rs  window.rs
crates/runtime/src/builtins/stream/join/: interval_join.rs  interval_join_forward.rs  tumbling_window_join.rs  tumbling_window_join_distinct.rs
crates/runtime/src/builtins/stream/window/: count_sliding_aligned_commutative_associative.rs  count_sliding_holistic.rs  count_sliding_invertible.rs  count_tumbling_holistic.rs  time_sliding_aligned_commutative_associative.rs  time_sliding_aligned_holistic.rs  time_sliding_invertible.rs  (+3 more)
crates/runtime/src/formats/: mod.rs
crates/runtime/src/formats/csv/: de.rs  ser.rs
crates/runtime/src/formats/json/: de.rs  ser.rs
crates/runtime/src/logging/: mod.rs
crates/runtime/src/runner/: context.rs  current_thread.rs  data_parallel.rs  env.rs  mod.rs  pinned_data_parallel.rs  single_thread.rs  task_parallel.rs  threadpool.rs
crates/runtime/src/state/: mod.rs
crates/runtime/src/traits/: mod.rs
crates/runtime/tests/: window.rs
experiments/nexmark/queries/rust/: Cargo.toml
experiments/nexmark/queries/rust/src/: q2.rs  q3.rs  q4.rs  q5.rs  q6.rs  q7.rs  qw.rs
experiments/wasm/guest-rs3/: Cargo.toml
experiments/wasm/guest-rs3/src/: bindings.rs  lib.rs
experiments/wasm/guest-rs3/wit/: component.wit
(+81 files in other folders)
