[package]
name = "cli"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "aqua"
path = "src/main.rs"

[features]
default = ["repl"]

[dependencies]
compiler = { path = "../compiler" }
repl = { path = "../repl", optional = true }
config = { path = "../config", features = ["clap"] }

anyhow = { version = "1.0.79" }
tracing = { version = "0.1.40", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
built = { version = "0.7.1", features = ["chrono"] }
