[package]
name = "compiler"
version.workspace = true
edition.workspace = true

[features]
default = []
optimiser = ["egglog", "symbol_table"]
interpret = ["runtime", "serde"]

[dependencies]
config = { path = "../config", default-features = false }
runtime = { path = "../runtime", default-features = false, optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }

ariadne = { version = "0.4.0" }
smol_str = { version = "0.2.1", features = ["std"] }
bitmask-enum = { version = "2.2.3" }
egglog = { git = "https://github.com/egraphs-good/egglog", optional = true }
symbol_table = { version = "0.3.0", optional = true }
# ena = { version = "0.14.2" }
# libffi = { version = "3.2.0" }

[dev-dependencies]
indoc = "2.0.4"
similar = "2.4.0"
serde_json = "1.0.113"

[[test]]
name = "serde"
required-features = ["interpret"]

[[test]]
name = "optimiser"
required-features = ["optimiser"]
