[package]
name = "compiler"
version.workspace = true
edition.workspace = true

[features]
default = []
optimiser = ["egglog", "symbol_table"]
explicit = []

[dependencies]
config = { path = "../config", default-features = false }
runtime = { path = "../runtime", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }

unindent = "0.2.3"
ariadne = { version = "0.4.0" }
bitmask-enum = { version = "2.2.3" }
append-only-vec = "0.1.3"
smol_str = { version = "0.2.1", features = ["std"] }
egglog = { git = "https://github.com/egraphs-good/egglog", optional = true }
symbol_table = { version = "0.3.0", optional = true }
# ena = { version = "0.14.2" }
# libffi = { version = "3.2.0" }

[dev-dependencies]
indoc = "2.0.5"
similar = "2.5.0"
serde_json = "1.0.115"

[[test]]
name = "serde"

[[test]]
name = "optimiser"
required-features = ["optimiser"]
