[package]
name = "compiler"
version.workspace = true
edition.workspace = true

[features]
default = ["optimiser"]
optimiser = ["egglog", "symbol_table"]
explicit = []

[dependencies]
config = { path = "../config", default-features = false }
runtime = { path = "../runtime", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }

ariadne = "0.4.0"
bitmask-enum = "2.2.3"
append-only-vec = "0.1.3"
smol_str = { version = "0.2.1", features = ["std"] }
ena = "0.14.3"
directories = "5.0.1"
names = "0.14.0"
indoc = "2.0.5"
tracing = "0.1.40"
anyhow = "1.0.41"
# libffi = { version = "3.2.0" }

egglog = { git = "https://github.com/egraphs-good/egglog", optional = true }
symbol_table = { version = "0.3.0", optional = true }

[dev-dependencies]
indoc = "2.0.5"
similar = "2.5.0"
serde_json = "1.0.115"

[[test]]
name = "serde"

[[test]]
name = "optimiser"
required-features = ["optimiser"]
