[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[features]
opt = [
  "itoa",
  "atoi",
  "ryu",
  "lexical-parse-float",
  "rustc-hash",
  "jemalloc",
  "btree-slab",
  "smallvec",
  "halfbrown",
  "smol_str",
  "arrayvec",
  "tokio/rt-multi-thread"
]
default = ["opt"]

[dependencies]
macros = { path = "../macros" }

# rdkafka = { version = "0.36.2" }
tokio = { version = "1.36.0", features = ["io-util", "io-std", "fs", "net", "rt", "macros"] }
tracing = { version = "0.1.40", default-features = false }
num-integer = { version = "0.1.46", default-features = false }

serde = { version = "1.0.197", features = ["derive", "rc"] }
tokio-stream = { version = "0.1.14" }
tokio-util = { version = "0.7.10", default-features = false, features  = ["codec"] }
futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
time = { version = "0.3.34", default-features = false, features = ["serde-human-readable"] }
serde_json = { version = "1.0.114" }
csv-core = { version = "0.1.11" }

# Optimisations 

arrayvec = { version = "0.7.4", optional = true }
halfbrown = { version = "0.2.5", optional = true }
smallvec = { version = "1.13.1", optional = true }
smol_str = { version = "0.2.1", features = ["serde"], optional = true }
rustc-hash = { version = "1.1.0", optional = true }
ryu = { version = "1.0.17", optional = true }
itoa = { version = "1.0.10", optional = true }
lexical-parse-float = { version = "0.8.5", optional = true, default-features = false, features = ["compact"] }
atoi = { version = "2.0.0", optional = true, default-features = false }
smartstring = { version = "1.0.1", optional = true, features = ["serde"] }
btree-slab = { version = "0.6.1", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemalloc = { version = "0.5.4", optional = true, package = "tikv-jemallocator" }

# TODO: Extensions

# url = { version = "2.5.0", features = ["serde"] }
# sled                  = { version = "0.34.7" }
# hyper                 = { version = "1.1.0" }
# once_cell             = { version = "1.19.0" }
# ort                   = { version = "1.16.3" , optional = true }
# num-traits            = { version = "0.2.17" }
# ndarray               = { version = "0.15.6", features = ["serde"] }
# image                 = { version = "0.24.8" }

[dev-dependencies]
criterion = "0.5.1" 

# String
smartstring = "1.0.1"
smol_str = "0.2.1"
smallstr = "0.3.0"
lasso = "0.7.2"

# Serialisation
serde = { version = "1.0.197", features = ["derive", "rc"] }
ciborium = "0.2.2" # CBOR
rmp = "0.8.12" # MessagePack
flexbuffers = "2.0.0" # FlexBuffers

# HashMap
halfbrown = "0.2.5"

# Vec
arrayvec = "0.7.4"

rand = "0.8.5"

[[bench]]
name = "vec"
harness = false
