[workspace]

[package]
name = "component"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.8"
once_cell = "1.19.0"
regex = "1.10.3"
wit-bindgen = { version = "0.19.1", default-features = false, features = ["realloc", "macros"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "pkg:component"
adapter = "wasi_snapshot_preview1.wasm"

[package.metadata.component.dependencies]
